backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashcard-service
  labels:
    run: flashcard
spec:
  type: NodePort
  ports:
    - port: 70
      targetPort: 1000
      protocol: TCP
  selector:
    run: flashcard
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
  labels:
    run: game
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 2000
      protocol: TCP
  selector:
    run: game
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
  labels:
    run: login
spec:
  ports:
    - port: 90
      targetPort: 3000
      protocol: TCP
  selector:
    run: login
---
apiVersion: v1
kind: Service
metadata:
  name: matchmaking-service
  labels:
    run: matchmaking
spec:
  type: NodePort
  ports:
    - port: 100
      targetPort: 4000
      protocol: TCP
  selector:
    run: matchmaking
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  labels:
    run: profile
spec:
  type: NodePort
  ports:
    - port: 110
      targetPort: 5000
      protocol: TCP
  selector:
    run: profile
---
