backend/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: language-ingress-2
spec:
  rules:
    - http:
        paths:
          - path: /api/login
            pathType: ImplementationSpecific
            backend:
              service:
                name: login-service
                port:
                  number: 80
